--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <!-- Шаблон изображения случайного пользователя -->
   <template id="picture">
     <a href="#" class="picture">
-      <img class="picture__img" src="" width="182" height="182" alt="Случайная фотография">
+      <img class="picture__img" src="url" width="182" height="182" alt="Случайная фотография">
       <p class="picture__info">
         <span class="picture__comments"></span>
         <span class="picture__likes"></span>
@@ -228,6 +228,14 @@
   <!-- Экран загрузки изображения -->
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
+  </template>
+
+  <!-- Комментарий-->
+  <template id="comment">
+    <li class="social__comment">
+      <img class="social__picture" src="url" alt="комментарий" width="35" height="35">
+      <p class="social__text"></p>
+    </li>
   </template>
   <script type="module" src="./js/main.js">
 
