--- a/index.html
+++ b/index.html
@@ -176,25 +176,20 @@
               Нравится <span class="likes-count">356</span>
             </p>
           </div>
+          
+   <!-- Комментарии к изображению -->
+   <div class="social__comment-count"><span class="comments-upload-count">5</span> из <span class="comments-count">125</span> комментариев</div>
+   <ul class="social__comments">
+     <li class="social__comment">
+       <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35" height="35">
+       <p class="social__text">Мега фото! Просто обалдеть. Как вам так удалось?</p>
+     </li>
+     <li class="social__comment">
+       <img class="social__picture" src="img/avatar-3.svg" alt="Аватар комментатора фотографии" width="35" height="35">
+        <p class="social__text">Да это фоташоп!!!!!!!!</p>
+     </li>
+   </ul>
 
-          <!-- Комментарии к изображению -->
-          <div class="social__comment-count">
-            5 из <span class="comments-count">125</span> комментариев
-          </div>
-          <ul class="social__comments">
-            <li class="social__comment">
-              <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35"
-                height="35" />
-              <p class="social__text">
-                Мега фото! Просто обалдеть. Как вам так удалось?
-              </p>
-            </li>
-            <li class="social__comment">
-              <img class="social__picture" src="img/avatar-3.svg" alt="Аватар комментатора фотографии" width="35"
-                height="35" />
-              <p class="social__text">Да это фоташоп!!!!!!!!</p>
-            </li>
-          </ul>
 
           <!-- Кнопка для загрузки новой порции комментариев -->
           <button type="button" class="social__comments-loader comments-loader">
